[gd_scene load_steps=23 format=4 uid="uid://32mkhrrnaif7"]

[ext_resource type="TileSet" uid="uid://dablnnvi6auwf" path="res://Tile Sets/floor_tile_set.tres" id="1_d88r8"]
[ext_resource type="Texture2D" uid="uid://dsp00svya1dg7" path="res://Character/Enemies/EnemyAnimation/frame_00_delay-0.08s.png" id="1_r2e7o"]
[ext_resource type="Texture2D" uid="uid://ckoy7c8oqjopc" path="res://Character/Enemies/EnemyAnimation/frame_01_delay-0.16s.png" id="2_6df8n"]
[ext_resource type="Texture2D" uid="uid://b33iid0lyjnj6" path="res://Places/home.png" id="2_21eqe"]
[ext_resource type="Texture2D" uid="uid://c6dlnu7dmqh7n" path="res://Character/Enemies/EnemyAnimation/frame_02_delay-0.16s.png" id="3_oxb10"]
[ext_resource type="Texture2D" uid="uid://drlqnh8g4f5oc" path="res://Character/Enemies/EnemyAnimation/frame_03_delay-0.16s.png" id="4_c6aho"]
[ext_resource type="Script" uid="uid://b1dbr4u7wsfqx" path="res://Scripts/blonde.gd" id="4_wcg3m"]
[ext_resource type="Texture2D" uid="uid://b5ble0sobm7dl" path="res://Character/character.png" id="5_2jc2f"]
[ext_resource type="Texture2D" uid="uid://cjoshdvox16lq" path="res://Character/Enemies/EnemyAnimation/frame_04_delay-0.08s.png" id="5_m7ph3"]
[ext_resource type="Texture2D" uid="uid://droxjb0wsu1h5" path="res://Character/Enemies/EnemyAnimation/frame_15_delay-0.08s.png" id="6_6pu7f"]
[ext_resource type="Texture2D" uid="uid://bglnwld0ptft1" path="res://Character/Enemies/EnemyAnimation/frame_16_delay-0.08s.png" id="7_pi0s4"]
[ext_resource type="Texture2D" uid="uid://dfqm6erl8sntf" path="res://Character/Enemies/EnemyAnimation/frame_17_delay-0.08s.png" id="8_tx5ak"]
[ext_resource type="Texture2D" uid="uid://dry1itn3il6mw" path="res://Character/Enemies/EnemyAnimation/frame_18_delay-0.08s.png" id="9_pf83i"]
[ext_resource type="Texture2D" uid="uid://cjds7pf6x6och" path="res://Character/Enemies/EnemyAnimation/frame_19_delay-0.08s.png" id="10_bw5oh"]
[ext_resource type="Texture2D" uid="uid://duukhcnix844s" path="res://Character/Enemies/EnemyAnimation/frame_20_delay-0.08s.png" id="11_e6qlx"]
[ext_resource type="Script" uid="uid://b0eyo1lnarqkf" path="res://Scripts/chapter1scripts/enemy_area.gd" id="16_711hm"]
[ext_resource type="AudioStream" uid="uid://cetitwix2xrdb" path="res://Sounds/Adrian Chase.mp3" id="17_6df8n"]

[sub_resource type="SpriteFrames" id="SpriteFrames_c6aho"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_r2e7o")
}, {
"duration": 1.0,
"texture": ExtResource("2_6df8n")
}, {
"duration": 1.0,
"texture": ExtResource("3_oxb10")
}, {
"duration": 1.0,
"texture": ExtResource("4_c6aho")
}, {
"duration": 1.0,
"texture": ExtResource("5_m7ph3")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 0.01,
"texture": ExtResource("6_6pu7f")
}, {
"duration": 1.0,
"texture": ExtResource("7_pi0s4")
}, {
"duration": 1.0,
"texture": ExtResource("8_tx5ak")
}, {
"duration": 1.0,
"texture": ExtResource("9_pf83i")
}, {
"duration": 1.0,
"texture": ExtResource("10_bw5oh")
}, {
"duration": 1.0,
"texture": ExtResource("11_e6qlx")
}],
"loop": true,
"name": &"run",
"speed": 11.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2jc2f"]
size = Vector2(225, 190)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l1h8d"]
size = Vector2(21, 58)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v8knv"]
size = Vector2(2720, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7yjb2"]
size = Vector2(40, 98)

[node name="Chapter1Outside2" type="Node2D"]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
top_level = true
position = Vector2(2799, -35)
rotation = 3.14159
scale = Vector2(0.135, -0.135)
sprite_frames = SubResource("SpriteFrames_c6aho")
animation = &"run"

[node name="TileMapLayer" type="TileMapLayer" parent="."]
light_mask = 2
visibility_layer = 2
tile_map_data = PackedByteArray("AAAAAAAAAQAAAAAAAAAAAAEAAQAAAAEAAAAAAAIAAQAAAAIAAAAAAAMAAQAAAAMAAAAAAAQAAQAAAAQAAAAAAAUAAQAAAAUAAAABAAAAAQABAAAAAAABAAEAAQABAAEAAAABAAIAAQABAAIAAAABAAMAAQABAAMAAAABAAQAAQABAAQAAAABAAUAAQABAAUAAAACAAAAAQACAAAAAAACAAEAAQACAAEAAAACAAIAAQACAAIAAAACAAMAAQACAAMAAAACAAQAAQACAAQAAAACAAUAAQACAAUAAAADAAAAAQADAAAAAAADAAEAAQADAAEAAAADAAIAAQADAAIAAAADAAMAAQADAAMAAAADAAQAAQADAAQAAAADAAUAAQADAAUAAAAEAAAAAQAEAAAAAAAEAAEAAQAEAAEAAAAEAAIAAQAEAAIAAAAEAAMAAQAEAAMAAAAEAAQAAQAEAAQAAAAEAAUAAQAEAAUAAAAFAAAAAQAFAAAAAAAFAAEAAQAFAAEAAAAFAAIAAQAFAAIAAAAFAAMAAQAFAAMAAAAFAAQAAQAFAAQAAAAFAAUAAQAFAAUAAAAGAAAAAQAAAAAAAAAGAAEAAQAAAAEAAAAGAAIAAQAAAAIAAAAGAAMAAQAAAAMAAAAGAAQAAQAAAAQAAAAGAAUAAQAAAAUAAAAHAAAAAQABAAAAAAAHAAEAAQABAAEAAAAHAAIAAQABAAIAAAAHAAMAAQABAAMAAAAHAAQAAQABAAQAAAAHAAUAAQABAAUAAAAIAAAAAQACAAAAAAAIAAEAAQACAAEAAAAIAAIAAQACAAIAAAAIAAMAAQACAAMAAAAIAAQAAQACAAQAAAAIAAUAAQACAAUAAAAJAAAAAQADAAAAAAAJAAEAAQADAAEAAAAJAAIAAQADAAIAAAAJAAMAAQADAAMAAAAJAAQAAQADAAQAAAAJAAUAAQADAAUAAAAKAAAAAQAEAAAAAAAKAAEAAQAEAAEAAAAKAAIAAQAEAAIAAAAKAAMAAQAEAAMAAAAKAAQAAQAEAAQAAAAKAAUAAQAEAAUAAAALAAAAAQAFAAAAAAALAAEAAQAFAAEAAAALAAIAAQAFAAIAAAALAAMAAQAFAAMAAAALAAQAAQAFAAQAAAALAAUAAQAFAAUAAAAMAAAAAQAAAAAAAAAMAAEAAQAAAAEAAAAMAAIAAQAAAAIAAAAMAAMAAQAAAAMAAAAMAAQAAQAAAAQAAAAMAAUAAQAAAAUAAAANAAAAAQABAAAAAAANAAEAAQABAAEAAAANAAIAAQABAAIAAAANAAMAAQABAAMAAAANAAQAAQABAAQAAAANAAUAAQABAAUAAAAOAAAAAQACAAAAAAAOAAEAAQACAAEAAAAOAAIAAQACAAIAAAAOAAMAAQACAAMAAAAOAAQAAQACAAQAAAAOAAUAAQACAAUAAAAPAAAAAQADAAAAAAAPAAEAAQADAAEAAAAPAAIAAQADAAIAAAAPAAMAAQADAAMAAAAPAAQAAQADAAQAAAAPAAUAAQADAAUAAAAQAAAAAQAEAAAAAAAQAAEAAQAEAAEAAAAQAAIAAQAEAAIAAAAQAAMAAQAEAAMAAAAQAAQAAQAEAAQAAAAQAAUAAQAEAAUAAAARAAAAAQAFAAAAAAARAAEAAQAFAAEAAAARAAIAAQAFAAIAAAARAAMAAQAFAAMAAAARAAQAAQAFAAQAAAARAAUAAQAFAAUAAAASAAAAAQAAAAAAAAASAAEAAQAAAAEAAAASAAIAAQAAAAIAAAASAAMAAQAAAAMAAAASAAQAAQAAAAQAAAASAAUAAQAAAAUAAAATAAAAAQABAAAAAAATAAEAAQABAAEAAAATAAIAAQABAAIAAAATAAMAAQABAAMAAAATAAQAAQABAAQAAAATAAUAAQABAAUAAAAUAAAAAQACAAAAAAAUAAEAAQACAAEAAAAUAAIAAQACAAIAAAAUAAMAAQACAAMAAAAUAAQAAQACAAQAAAAUAAUAAQACAAUAAAAVAAAAAQADAAAAAAAVAAEAAQADAAEAAAAVAAIAAQADAAIAAAAVAAMAAQADAAMAAAAVAAQAAQADAAQAAAAVAAUAAQADAAUAAAAWAAAAAQAEAAAAAAAWAAEAAQAEAAEAAAAWAAIAAQAEAAIAAAAWAAMAAQAEAAMAAAAWAAQAAQAEAAQAAAAWAAUAAQAEAAUAAAAXAAAAAQAFAAAAAAAXAAEAAQAFAAEAAAAXAAIAAQAFAAIAAAAXAAMAAQAFAAMAAAAXAAQAAQAFAAQAAAAXAAUAAQAFAAUAAAAYAAAAAQAAAAAAAAAYAAEAAQAAAAEAAAAYAAIAAQAAAAIAAAAYAAMAAQAAAAMAAAAYAAQAAQAAAAQAAAAYAAUAAQAAAAUAAAAZAAAAAQABAAAAAAAZAAEAAQABAAEAAAAZAAIAAQABAAIAAAAZAAMAAQABAAMAAAAZAAQAAQABAAQAAAAZAAUAAQABAAUAAAAaAAAAAQACAAAAAAAaAAEAAQACAAEAAAAaAAIAAQACAAIAAAAaAAMAAQACAAMAAAAaAAQAAQACAAQAAAAaAAUAAQACAAUAAAAbAAAAAQADAAAAAAAbAAEAAQADAAEAAAAbAAIAAQADAAIAAAAbAAMAAQADAAMAAAAbAAQAAQADAAQAAAAbAAUAAQADAAUAAAAcAAAAAQAEAAAAAAAcAAEAAQAEAAEAAAAcAAIAAQAEAAIAAAAcAAMAAQAEAAMAAAAcAAQAAQAEAAQAAAAcAAUAAQAEAAUAAAAdAAAAAQAFAAAAAAAdAAEAAQAFAAEAAAAdAAIAAQAFAAIAAAAdAAMAAQAFAAMAAAAdAAQAAQAFAAQAAAAdAAUAAQAFAAUAAAAeAAAAAQAAAAAAAAAeAAEAAQAAAAEAAAAeAAIAAQAAAAIAAAAeAAMAAQAAAAMAAAAeAAQAAQAAAAQAAAAeAAUAAQAAAAUAAAAfAAAAAQABAAAAAAAfAAEAAQABAAEAAAAfAAIAAQABAAIAAAAfAAMAAQABAAMAAAAfAAQAAQABAAQAAAAfAAUAAQABAAUAAAAgAAAAAQACAAAAAAAgAAEAAQACAAEAAAAgAAIAAQACAAIAAAAgAAMAAQACAAMAAAAgAAQAAQACAAQAAAAgAAUAAQACAAUAAAAhAAAAAQADAAAAAAAhAAEAAQADAAEAAAAhAAIAAQADAAIAAAAhAAMAAQADAAMAAAAhAAQAAQADAAQAAAAhAAUAAQADAAUAAAAiAAAAAQAEAAAAAAAiAAEAAQAEAAEAAAAiAAIAAQAEAAIAAAAiAAMAAQAEAAMAAAAiAAQAAQAEAAQAAAAiAAUAAQAEAAUAAAAjAAAAAQAFAAAAAAAjAAEAAQAFAAEAAAAjAAIAAQAFAAIAAAAjAAMAAQAFAAMAAAAjAAQAAQAFAAQAAAAjAAUAAQAFAAUAAAAkAAAAAQAAAAAAAAAkAAEAAQAAAAEAAAAkAAIAAQAAAAIAAAAkAAMAAQAAAAMAAAAkAAQAAQAAAAQAAAAkAAUAAQAAAAUAAAAlAAAAAQABAAAAAAAlAAEAAQABAAEAAAAlAAIAAQABAAIAAAAlAAMAAQABAAMAAAAlAAQAAQABAAQAAAAlAAUAAQABAAUAAAAmAAAAAQACAAAAAAAmAAEAAQACAAEAAAAmAAIAAQACAAIAAAAmAAMAAQACAAMAAAAmAAQAAQACAAQAAAAmAAUAAQACAAUAAAAnAAAAAQADAAAAAAAnAAEAAQADAAEAAAAnAAIAAQADAAIAAAAnAAMAAQADAAMAAAAnAAQAAQADAAQAAAAnAAUAAQADAAUAAAAoAAAAAQAEAAAAAAAoAAEAAQAEAAEAAAAoAAIAAQAEAAIAAAAoAAMAAQAEAAMAAAAoAAQAAQAEAAQAAAAoAAUAAQAEAAUAAAApAAAAAQAFAAAAAAApAAEAAQAFAAEAAAApAAIAAQAFAAIAAAApAAMAAQAFAAMAAAApAAQAAQAFAAQAAAApAAUAAQAFAAUAAAAqAAAAAQAAAAAAAAAqAAEAAQAAAAEAAAAqAAIAAQAAAAIAAAAqAAMAAQAAAAMAAAAqAAQAAQAAAAQAAAAqAAUAAQAAAAUAAAArAAAAAQABAAAAAAArAAEAAQABAAEAAAArAAIAAQABAAIAAAArAAMAAQABAAMAAAArAAQAAQABAAQAAAArAAUAAQABAAUAAAAsAAAAAQACAAAAAAAsAAEAAQACAAEAAAAsAAIAAQACAAIAAAAsAAMAAQACAAMAAAAsAAQAAQACAAQAAAAsAAUAAQACAAUAAAAtAAAAAQADAAAAAAAtAAEAAQADAAEAAAAtAAIAAQADAAIAAAAtAAMAAQADAAMAAAAtAAQAAQADAAQAAAAtAAUAAQADAAUAAAAuAAAAAQAEAAAAAAAuAAEAAQAEAAEAAAAuAAIAAQAEAAIAAAAuAAMAAQAEAAMAAAAuAAQAAQAEAAQAAAAuAAUAAQAEAAUAAAAvAAAAAQAFAAAAAAAvAAEAAQAFAAEAAAAvAAIAAQAFAAIAAAAvAAMAAQAFAAMAAAAvAAQAAQAFAAQAAAAvAAUAAQAFAAUAAAAwAAAAAQAAAAAAAAAwAAEAAQAAAAEAAAAwAAIAAQAAAAIAAAAwAAMAAQAAAAMAAAAwAAQAAQAAAAQAAAAwAAUAAQAAAAUAAAAxAAAAAQABAAAAAAAxAAEAAQABAAEAAAAxAAIAAQABAAIAAAAxAAMAAQABAAMAAAAxAAQAAQABAAQAAAAxAAUAAQABAAUAAAAyAAAAAQACAAAAAAAyAAEAAQACAAEAAAAyAAIAAQACAAIAAAAyAAMAAQACAAMAAAAyAAQAAQACAAQAAAAyAAUAAQACAAUAAAAzAAAAAQADAAAAAAAzAAEAAQADAAEAAAAzAAIAAQADAAIAAAAzAAMAAQADAAMAAAAzAAQAAQADAAQAAAAzAAUAAQADAAUAAAA0AAAAAQAEAAAAAAA0AAEAAQAEAAEAAAA0AAIAAQAEAAIAAAA0AAMAAQAEAAMAAAA0AAQAAQAEAAQAAAA0AAUAAQAEAAUAAAA1AAAAAQAFAAAAAAA1AAEAAQAFAAEAAAA1AAIAAQAFAAIAAAA1AAMAAQAFAAMAAAA1AAQAAQAFAAQAAAA1AAUAAQAFAAUAAAA2AAAAAQAAAAAAAAA2AAEAAQAAAAEAAAA2AAIAAQAAAAIAAAA2AAMAAQAAAAMAAAA2AAQAAQAAAAQAAAA2AAUAAQAAAAUAAAA3AAAAAQABAAAAAAA3AAEAAQABAAEAAAA3AAIAAQABAAIAAAA3AAMAAQABAAMAAAA3AAQAAQABAAQAAAA3AAUAAQABAAUAAAA4AAAAAQACAAAAAAA4AAEAAQACAAEAAAA4AAIAAQACAAIAAAA4AAMAAQACAAMAAAA4AAQAAQACAAQAAAA4AAUAAQACAAUAAAA5AAAAAQADAAAAAAA5AAEAAQADAAEAAAA5AAIAAQADAAIAAAA5AAMAAQADAAMAAAA5AAQAAQADAAQAAAA5AAUAAQADAAUAAAA6AAAAAQAEAAAAAAA6AAEAAQAEAAEAAAA6AAIAAQAEAAIAAAA6AAMAAQAEAAMAAAA6AAQAAQAEAAQAAAA6AAUAAQAEAAUAAAA7AAAAAQAFAAAAAAA7AAEAAQAFAAEAAAA7AAIAAQAFAAIAAAA7AAMAAQAFAAMAAAA7AAQAAQAFAAQAAAA7AAUAAQAFAAUAAAA8AAAAAQAAAAAAAAA8AAEAAQAAAAEAAAA8AAIAAQAAAAIAAAA8AAMAAQAAAAMAAAA8AAQAAQAAAAQAAAA8AAUAAQAAAAUAAAA9AAAAAQABAAAAAAA9AAEAAQABAAEAAAA9AAIAAQABAAIAAAA9AAMAAQABAAMAAAA9AAQAAQABAAQAAAA9AAUAAQABAAUAAAA+AAAAAQACAAAAAAA+AAEAAQACAAEAAAA+AAIAAQACAAIAAAA+AAMAAQACAAMAAAA+AAQAAQACAAQAAAA+AAUAAQACAAUAAAA/AAAAAQADAAAAAAA/AAEAAQADAAEAAAA/AAIAAQADAAIAAAA/AAMAAQADAAMAAAA/AAQAAQADAAQAAAA/AAUAAQADAAUAAABAAAAAAQAEAAAAAABAAAEAAQAEAAEAAABAAAIAAQAEAAIAAABAAAMAAQAEAAMAAABAAAQAAQAEAAQAAABAAAUAAQAEAAUAAABBAAAAAQAFAAAAAABBAAEAAQAFAAEAAABBAAIAAQAFAAIAAABBAAMAAQAFAAMAAABBAAQAAQAFAAQAAABBAAUAAQAFAAUAAABCAAAAAQAAAAAAAABCAAEAAQAAAAEAAABCAAIAAQAAAAIAAABCAAMAAQAAAAMAAABCAAQAAQAAAAQAAABCAAUAAQAAAAUAAABDAAAAAQABAAAAAABDAAEAAQABAAEAAABDAAIAAQABAAIAAABDAAMAAQABAAMAAABDAAQAAQABAAQAAABDAAUAAQABAAUAAABEAAAAAQACAAAAAABEAAEAAQACAAEAAABEAAIAAQACAAIAAABEAAMAAQACAAMAAABEAAQAAQACAAQAAABEAAUAAQACAAUAAABFAAAAAQADAAAAAABFAAEAAQADAAEAAABFAAIAAQADAAIAAABFAAMAAQADAAMAAABFAAQAAQADAAQAAABFAAUAAQADAAUAAABGAAAAAQAEAAAAAABGAAEAAQAEAAEAAABGAAIAAQAEAAIAAABGAAMAAQAEAAMAAABGAAQAAQAEAAQAAABGAAUAAQAEAAUAAABHAAAAAQAFAAAAAABHAAEAAQAFAAEAAABHAAIAAQAFAAIAAABHAAMAAQAFAAMAAABHAAQAAQAFAAQAAABHAAUAAQAFAAUAAABIAAAAAQAAAAAAAABIAAEAAQAAAAEAAABIAAIAAQAAAAIAAABIAAMAAQAAAAMAAABIAAQAAQAAAAQAAABIAAUAAQAAAAUAAABJAAAAAQABAAAAAABJAAEAAQABAAEAAABJAAIAAQABAAIAAABJAAMAAQABAAMAAABJAAQAAQABAAQAAABJAAUAAQABAAUAAABKAAAAAQACAAAAAABKAAEAAQACAAEAAABKAAIAAQACAAIAAABKAAMAAQACAAMAAABKAAQAAQACAAQAAABKAAUAAQACAAUAAABLAAAAAQADAAAAAABLAAEAAQADAAEAAABLAAIAAQADAAIAAABLAAMAAQADAAMAAABLAAQAAQADAAQAAABLAAUAAQADAAUAAABMAAAAAQAEAAAAAABMAAEAAQAEAAEAAABMAAIAAQAEAAIAAABMAAMAAQAEAAMAAABMAAQAAQAEAAQAAABMAAUAAQAEAAUAAABNAAAAAQAFAAAAAABNAAEAAQAFAAEAAABNAAIAAQAFAAIAAABNAAMAAQAFAAMAAABNAAQAAQAFAAQAAABNAAUAAQAFAAUAAABOAAAAAQAAAAAAAABOAAEAAQAAAAEAAABOAAIAAQAAAAIAAABOAAMAAQAAAAMAAABOAAQAAQAAAAQAAABOAAUAAQAAAAUAAABPAAAAAQABAAAAAABPAAEAAQABAAEAAABPAAIAAQABAAIAAABPAAMAAQABAAMAAABPAAQAAQABAAQAAABPAAUAAQABAAUAAABQAAAAAQACAAAAAABQAAEAAQACAAEAAABQAAIAAQACAAIAAABQAAMAAQACAAMAAABQAAQAAQACAAQAAABQAAUAAQACAAUAAABRAAAAAQADAAAAAABRAAEAAQADAAEAAABRAAIAAQADAAIAAABRAAMAAQADAAMAAABRAAQAAQADAAQAAABRAAUAAQADAAUAAABSAAAAAQAEAAAAAABSAAEAAQAEAAEAAABSAAIAAQAEAAIAAABSAAMAAQAEAAMAAABSAAQAAQAEAAQAAABSAAUAAQAEAAUAAABTAAAAAQAFAAAAAABTAAEAAQAFAAEAAABTAAIAAQAFAAIAAABTAAMAAQAFAAMAAABTAAQAAQAFAAQAAABTAAUAAQAFAAUAAABUAAAAAQAAAAAAAABUAAEAAQAAAAEAAABUAAIAAQAAAAIAAABUAAMAAQAAAAMAAABUAAQAAQAAAAQAAABUAAUAAQAAAAUAAABVAAAAAQABAAAAAABVAAEAAQABAAEAAABVAAIAAQABAAIAAABVAAMAAQABAAMAAABVAAQAAQABAAQAAABVAAUAAQABAAUAAABWAAAAAQACAAAAAABWAAEAAQACAAEAAABWAAIAAQACAAIAAABWAAMAAQACAAMAAABWAAQAAQACAAQAAABWAAUAAQACAAUAAABXAAAAAQADAAAAAABXAAEAAQADAAEAAABXAAIAAQADAAIAAABXAAMAAQADAAMAAABXAAQAAQADAAQAAABXAAUAAQADAAUAAABYAAAAAQAEAAAAAABYAAEAAQAEAAEAAABYAAIAAQAEAAIAAABYAAMAAQAEAAMAAABYAAQAAQAEAAQAAABYAAUAAQAEAAUAAABZAAAAAQAFAAAAAABZAAEAAQAFAAEAAABZAAIAAQAFAAIAAABZAAMAAQAFAAMAAABZAAQAAQAFAAQAAABZAAUAAQAFAAUAAABaAAAAAQAAAAAAAABaAAEAAQAAAAEAAABaAAIAAQAAAAIAAABaAAMAAQAAAAMAAABaAAQAAQAAAAQAAABaAAUAAQAAAAUAAABbAAAAAQABAAAAAABbAAEAAQABAAEAAABbAAIAAQABAAIAAABbAAMAAQABAAMAAABbAAQAAQABAAQAAABbAAUAAQABAAUAAABcAAAAAQACAAAAAABcAAEAAQACAAEAAABcAAIAAQACAAIAAABcAAMAAQACAAMAAABcAAQAAQACAAQAAABcAAUAAQACAAUAAABdAAAAAQADAAAAAABdAAEAAQADAAEAAABdAAIAAQADAAIAAABdAAMAAQADAAMAAABdAAQAAQADAAQAAABdAAUAAQADAAUAAABeAAAAAQAEAAAAAABeAAEAAQAEAAEAAABeAAIAAQAEAAIAAABeAAMAAQAEAAMAAABeAAQAAQAEAAQAAABeAAUAAQAEAAUAAABfAAAAAQAFAAAAAABfAAEAAQAFAAEAAABfAAIAAQAFAAIAAABfAAMAAQAFAAMAAABfAAQAAQAFAAQAAABfAAUAAQAFAAUAAABgAAAAAQAAAAAAAABgAAEAAQAAAAEAAABgAAIAAQAAAAIAAABgAAMAAQAAAAMAAABgAAQAAQAAAAQAAABgAAUAAQAAAAUAAABhAAAAAQABAAAAAABhAAEAAQABAAEAAABhAAIAAQABAAIAAABhAAMAAQABAAMAAABhAAQAAQABAAQAAABhAAUAAQABAAUAAABiAAAAAQACAAAAAABiAAEAAQACAAEAAABiAAIAAQACAAIAAABiAAMAAQACAAMAAABiAAQAAQACAAQAAABiAAUAAQACAAUAAABjAAAAAQADAAAAAABjAAEAAQADAAEAAABjAAIAAQADAAIAAABjAAMAAQADAAMAAABjAAQAAQADAAQAAABjAAUAAQADAAUAAABkAAAAAQAEAAAAAABkAAEAAQAEAAEAAABkAAIAAQAEAAIAAABkAAMAAQAEAAMAAABkAAQAAQAEAAQAAABkAAUAAQAEAAUAAABlAAAAAQAFAAAAAABlAAEAAQAFAAEAAABlAAIAAQAFAAIAAABlAAMAAQAFAAMAAABlAAQAAQAFAAQAAABlAAUAAQAFAAUAAABmAAAAAQAAAAAAAABmAAEAAQAAAAEAAABmAAIAAQAAAAIAAABmAAMAAQAAAAMAAABmAAQAAQAAAAQAAABmAAUAAQAAAAUAAABnAAAAAQABAAAAAABnAAEAAQABAAEAAABnAAIAAQABAAIAAABnAAMAAQABAAMAAABnAAQAAQABAAQAAABnAAUAAQABAAUAAABoAAAAAQACAAAAAABoAAEAAQACAAEAAABoAAIAAQACAAIAAABoAAMAAQACAAMAAABoAAQAAQACAAQAAABoAAUAAQACAAUAAABpAAAAAQADAAAAAABpAAEAAQADAAEAAABpAAIAAQADAAIAAABpAAMAAQADAAMAAABpAAQAAQADAAQAAABpAAUAAQADAAUAAABqAAAAAQAEAAAAAABqAAEAAQAEAAEAAABqAAIAAQAEAAIAAABqAAMAAQAEAAMAAABqAAQAAQAEAAQAAABqAAUAAQAEAAUAAABrAAAAAQAFAAAAAABrAAEAAQAFAAEAAABrAAIAAQAFAAIAAABrAAMAAQAFAAMAAABrAAQAAQAFAAQAAABrAAUAAQAFAAUAAABsAAAAAQAAAAAAAABsAAEAAQAAAAEAAABsAAIAAQAAAAIAAABsAAMAAQAAAAMAAABsAAQAAQAAAAQAAABsAAUAAQAAAAUAAABtAAAAAQABAAAAAABtAAEAAQABAAEAAABtAAIAAQABAAIAAABtAAMAAQABAAMAAABtAAQAAQABAAQAAABtAAUAAQABAAUAAABuAAAAAQACAAAAAABuAAEAAQACAAEAAABuAAIAAQACAAIAAABuAAMAAQACAAMAAABuAAQAAQACAAQAAABuAAUAAQACAAUAAABvAAAAAQADAAAAAABvAAEAAQADAAEAAABvAAIAAQADAAIAAABvAAMAAQADAAMAAABvAAQAAQADAAQAAABvAAUAAQADAAUAAABwAAAAAQAEAAAAAABwAAEAAQAEAAEAAABwAAIAAQAEAAIAAABwAAMAAQAEAAMAAABwAAQAAQAEAAQAAABwAAUAAQAEAAUAAABxAAAAAQAFAAAAAABxAAEAAQAFAAEAAABxAAIAAQAFAAIAAABxAAMAAQAFAAMAAABxAAQAAQAFAAQAAABxAAUAAQAFAAUAAAByAAAAAQAAAAAAAAByAAEAAQAAAAEAAAByAAIAAQAAAAIAAAByAAMAAQAAAAMAAAByAAQAAQAAAAQAAAByAAUAAQAAAAUAAABzAAAAAQABAAAAAABzAAEAAQABAAEAAABzAAIAAQABAAIAAABzAAMAAQABAAMAAABzAAQAAQABAAQAAABzAAUAAQABAAUAAAB0AAAAAQACAAAAAAB0AAEAAQACAAEAAAB0AAIAAQACAAIAAAB0AAMAAQACAAMAAAB0AAQAAQACAAQAAAB0AAUAAQACAAUAAAB1AAAAAQADAAAAAAB1AAEAAQADAAEAAAB1AAIAAQADAAIAAAB1AAMAAQADAAMAAAB1AAQAAQADAAQAAAB1AAUAAQADAAUAAAB2AAAAAQAEAAAAAAB2AAEAAQAEAAEAAAB2AAIAAQAEAAIAAAB2AAMAAQAEAAMAAAB2AAQAAQAEAAQAAAB2AAUAAQAEAAUAAAB3AAAAAQAFAAAAAAB3AAEAAQAFAAEAAAB3AAIAAQAFAAIAAAB3AAMAAQAFAAMAAAB3AAQAAQAFAAQAAAB3AAUAAQAFAAUAAAB4AAAAAQAAAAAAAAB4AAEAAQAAAAEAAAB4AAIAAQAAAAIAAAB4AAMAAQAAAAMAAAB4AAQAAQAAAAQAAAB4AAUAAQAAAAUAAAB5AAAAAQABAAAAAAB5AAEAAQABAAEAAAB5AAIAAQABAAIAAAB5AAMAAQABAAMAAAB5AAQAAQABAAQAAAB5AAUAAQABAAUAAAB6AAAAAQACAAAAAAB6AAEAAQACAAEAAAB6AAIAAQACAAIAAAB6AAMAAQACAAMAAAB6AAQAAQACAAQAAAB6AAUAAQACAAUAAAB7AAAAAQADAAAAAAB7AAEAAQADAAEAAAB7AAIAAQADAAIAAAB7AAMAAQADAAMAAAB7AAQAAQADAAQAAAB7AAUAAQADAAUAAAB8AAAAAQAEAAAAAAB8AAEAAQAEAAEAAAB8AAIAAQAEAAIAAAB8AAMAAQAEAAMAAAB8AAQAAQAEAAQAAAB8AAUAAQAEAAUAAAB9AAAAAQAFAAAAAAB9AAEAAQAFAAEAAAB9AAIAAQAFAAIAAAB9AAMAAQAFAAMAAAB9AAQAAQAFAAQAAAB9AAUAAQAFAAUAAAB+AAAAAQAAAAAAAAB+AAEAAQAAAAEAAAB+AAIAAQAAAAIAAAB+AAMAAQAAAAMAAAB+AAQAAQAAAAQAAAB+AAUAAQAAAAUAAAB/AAAAAQABAAAAAAB/AAEAAQABAAEAAAB/AAIAAQABAAIAAAB/AAMAAQABAAMAAAB/AAQAAQABAAQAAAB/AAUAAQABAAUAAACAAAAAAQACAAAAAACAAAEAAQACAAEAAACAAAIAAQACAAIAAACAAAMAAQACAAMAAACAAAQAAQACAAQAAACAAAUAAQACAAUAAACBAAAAAQADAAAAAACBAAEAAQADAAEAAACBAAIAAQADAAIAAACBAAMAAQADAAMAAACBAAQAAQADAAQAAACBAAUAAQADAAUAAACCAAAAAQAEAAAAAACCAAEAAQAEAAEAAACCAAIAAQAEAAIAAACCAAMAAQAEAAMAAACCAAQAAQAEAAQAAACCAAUAAQAEAAUAAACDAAAAAQAFAAAAAACDAAEAAQAFAAEAAACDAAIAAQAFAAIAAACDAAMAAQAFAAMAAACDAAQAAQAFAAQAAACDAAUAAQAFAAUAAACEAAAAAQAAAAAAAACEAAEAAQAAAAEAAACEAAIAAQAAAAIAAACEAAMAAQAAAAMAAACEAAQAAQAAAAQAAACEAAUAAQAAAAUAAACFAAAAAQABAAAAAACFAAEAAQABAAEAAACFAAIAAQABAAIAAACFAAMAAQABAAMAAACFAAQAAQABAAQAAACFAAUAAQABAAUAAACGAAAAAQACAAAAAACGAAEAAQACAAEAAACGAAIAAQACAAIAAACGAAMAAQACAAMAAACGAAQAAQACAAQAAACGAAUAAQACAAUAAACHAAAAAQADAAAAAACHAAEAAQADAAEAAACHAAIAAQADAAIAAACHAAMAAQADAAMAAACHAAQAAQADAAQAAACHAAUAAQADAAUAAACIAAAAAQAEAAAAAACIAAEAAQAEAAEAAACIAAIAAQAEAAIAAACIAAMAAQAEAAMAAACIAAQAAQAEAAQAAACIAAUAAQAEAAUAAACJAAAAAQAFAAAAAACJAAEAAQAFAAEAAACJAAIAAQAFAAIAAACJAAMAAQAFAAMAAACJAAQAAQAFAAQAAACJAAUAAQAFAAUAAACKAAAAAQAAAAAAAACKAAEAAQAAAAEAAACKAAIAAQAAAAIAAACKAAMAAQAAAAMAAACKAAQAAQAAAAQAAACKAAUAAQAAAAUAAACLAAAAAQABAAAAAACLAAEAAQABAAEAAACLAAIAAQABAAIAAACLAAMAAQABAAMAAACLAAQAAQABAAQAAACLAAUAAQABAAUAAACMAAAAAQACAAAAAACMAAEAAQACAAEAAACMAAIAAQACAAIAAACMAAMAAQACAAMAAACMAAQAAQACAAQAAACMAAUAAQACAAUAAACNAAAAAQADAAAAAACNAAEAAQADAAEAAACNAAIAAQADAAIAAACNAAMAAQADAAMAAACNAAQAAQADAAQAAACNAAUAAQADAAUAAACOAAAAAQAEAAAAAACOAAEAAQAEAAEAAACOAAIAAQAEAAIAAACOAAMAAQAEAAMAAACOAAQAAQAEAAQAAACOAAUAAQAEAAUAAACPAAAAAQAFAAAAAACPAAEAAQAFAAEAAACPAAIAAQAFAAIAAACPAAMAAQAFAAMAAACPAAQAAQAFAAQAAACPAAUAAQAFAAUAAACQAAAAAQAAAAAAAACQAAEAAQAAAAEAAACQAAIAAQAAAAIAAACQAAMAAQAAAAMAAACQAAQAAQAAAAQAAACQAAUAAQAAAAUAAACRAAAAAQABAAAAAACRAAEAAQABAAEAAACRAAIAAQABAAIAAACRAAMAAQABAAMAAACRAAQAAQABAAQAAACRAAUAAQABAAUAAACSAAAAAQACAAAAAACSAAEAAQACAAEAAACSAAIAAQACAAIAAACSAAMAAQACAAMAAACSAAQAAQACAAQAAACSAAUAAQACAAUAAACTAAAAAQADAAAAAACTAAEAAQADAAEAAACTAAIAAQADAAIAAACTAAMAAQADAAMAAACTAAQAAQADAAQAAACTAAUAAQADAAUAAACUAAAAAQAEAAAAAACUAAEAAQAEAAEAAACUAAIAAQAEAAIAAACUAAMAAQAEAAMAAACUAAQAAQAEAAQAAACUAAUAAQAEAAUAAACVAAAAAQAFAAAAAACVAAEAAQAFAAEAAACVAAIAAQAFAAIAAACVAAMAAQAFAAMAAACVAAQAAQAFAAQAAACVAAUAAQAFAAUAAACWAAAAAQAAAAAAAACWAAEAAQAAAAEAAACWAAIAAQAAAAIAAACWAAMAAQAAAAMAAACWAAQAAQAAAAQAAACWAAUAAQAAAAUAAACXAAAAAQABAAAAAACXAAEAAQABAAEAAACXAAIAAQABAAIAAACXAAMAAQABAAMAAACXAAQAAQABAAQAAACXAAUAAQABAAUAAACYAAAAAQACAAAAAACYAAEAAQACAAEAAACYAAIAAQACAAIAAACYAAMAAQACAAMAAACYAAQAAQACAAQAAACYAAUAAQACAAUAAACZAAAAAQADAAAAAACZAAEAAQADAAEAAACZAAIAAQADAAIAAACZAAMAAQADAAMAAACZAAQAAQADAAQAAACZAAUAAQADAAUAAACaAAAAAQAEAAAAAACaAAEAAQAEAAEAAACaAAIAAQAEAAIAAACaAAMAAQAEAAMAAACaAAQAAQAEAAQAAACaAAUAAQAEAAUAAACbAAAAAQAFAAAAAACbAAEAAQAFAAEAAACbAAIAAQAFAAIAAACbAAMAAQAFAAMAAACbAAQAAQAFAAQAAACbAAUAAQAFAAUAAACcAAAAAQAAAAAAAACcAAEAAQAAAAEAAACcAAIAAQAAAAIAAACcAAMAAQAAAAMAAACcAAQAAQAAAAQAAACcAAUAAQAAAAUAAACdAAAAAQABAAAAAACdAAEAAQABAAEAAACdAAIAAQABAAIAAACdAAMAAQABAAMAAACdAAQAAQABAAQAAACdAAUAAQABAAUAAACeAAAAAQACAAAAAACeAAEAAQACAAEAAACeAAIAAQACAAIAAACeAAMAAQACAAMAAACeAAQAAQACAAQAAACeAAUAAQACAAUAAACfAAAAAQADAAAAAACfAAEAAQADAAEAAACfAAIAAQADAAIAAACfAAMAAQADAAMAAACfAAQAAQADAAQAAACfAAUAAQADAAUAAACgAAAAAQAEAAAAAACgAAEAAQAEAAEAAACgAAIAAQAEAAIAAACgAAMAAQAEAAMAAACgAAQAAQAEAAQAAACgAAUAAQAEAAUAAAChAAAAAQAFAAAAAAChAAEAAQAFAAEAAAChAAIAAQAFAAIAAAChAAMAAQAFAAMAAAChAAQAAQAFAAQAAAChAAUAAQAFAAUAAACiAAAAAQAAAAAAAACiAAEAAQAAAAEAAACiAAIAAQAAAAIAAACiAAMAAQAAAAMAAACiAAQAAQAAAAQAAACiAAUAAQAAAAUAAACjAAAAAQABAAAAAACjAAEAAQABAAEAAACjAAIAAQABAAIAAACjAAMAAQABAAMAAACjAAQAAQABAAQAAACjAAUAAQABAAUAAACkAAAAAQACAAAAAACkAAEAAQACAAEAAACkAAIAAQACAAIAAACkAAMAAQACAAMAAACkAAQAAQACAAQAAACkAAUAAQACAAUAAAClAAAAAQADAAAAAAClAAEAAQADAAEAAAClAAIAAQADAAIAAAClAAMAAQADAAMAAAClAAQAAQADAAQAAAClAAUAAQADAAUAAACmAAAAAQAEAAAAAACmAAEAAQAEAAEAAACmAAIAAQAEAAIAAACmAAMAAQAEAAMAAACmAAQAAQAEAAQAAACmAAUAAQAEAAUAAACnAAAAAQAFAAAAAACnAAEAAQAFAAEAAACnAAIAAQAFAAIAAACnAAMAAQAFAAMAAACnAAQAAQAFAAQAAACnAAUAAQAFAAUAAACoAAAAAQAAAAAAAACoAAEAAQAAAAEAAACoAAIAAQAAAAIAAACoAAMAAQAAAAMAAACoAAQAAQAAAAQAAACoAAUAAQAAAAUAAACpAAAAAQABAAAAAACpAAEAAQABAAEAAACpAAIAAQABAAIAAACpAAMAAQABAAMAAACpAAQAAQABAAQAAACpAAUAAQABAAUAAACqAAAAAQACAAAAAACqAAEAAQACAAEAAACqAAIAAQACAAIAAACqAAMAAQACAAMAAACqAAQAAQACAAQAAACqAAUAAQACAAUAAACrAAAAAQADAAAAAACrAAEAAQADAAEAAACrAAIAAQADAAIAAACrAAMAAQADAAMAAACrAAQAAQADAAQAAACrAAUAAQADAAUAAACsAAAAAQAEAAAAAACsAAEAAQAEAAEAAACsAAIAAQAEAAIAAACsAAMAAQAEAAMAAACsAAQAAQAEAAQAAACsAAUAAQAEAAUAAACtAAAAAQAFAAAAAACtAAEAAQAFAAEAAACtAAIAAQAFAAIAAACtAAMAAQAFAAMAAACtAAQAAQAFAAQAAACtAAUAAQAFAAUAAACuAAAAAQAAAAAAAACuAAEAAQAAAAEAAACuAAIAAQAAAAIAAACuAAMAAQAAAAMAAACuAAQAAQAAAAQAAACuAAUAAQAAAAUAAACvAAAAAQABAAAAAACvAAEAAQABAAEAAACvAAIAAQABAAIAAACvAAMAAQABAAMAAACvAAQAAQABAAQAAACvAAUAAQABAAUAAACwAAAAAQACAAAAAACwAAEAAQACAAEAAACwAAIAAQACAAIAAACwAAMAAQACAAMAAACwAAQAAQACAAQAAACwAAUAAQACAAUAAACxAAAAAQADAAAAAACxAAEAAQADAAEAAACxAAIAAQADAAIAAACxAAMAAQADAAMAAACxAAQAAQADAAQAAACxAAUAAQADAAUAAACyAAAAAQAEAAAAAACyAAEAAQAEAAEAAACyAAIAAQAEAAIAAACyAAMAAQAEAAMAAACyAAQAAQAEAAQAAACyAAUAAQAEAAUAAACzAAAAAQAFAAAAAACzAAEAAQAFAAEAAACzAAIAAQAFAAIAAACzAAMAAQAFAAMAAACzAAQAAQAFAAQAAACzAAUAAQAFAAUAAAC0AAAAAQAAAAAAAAC0AAEAAQAAAAEAAAC0AAIAAQAAAAIAAAC0AAMAAQAAAAMAAAC0AAQAAQAAAAQAAAC0AAUAAQAAAAUAAAC1AAAAAQABAAAAAAC1AAEAAQABAAEAAAC1AAIAAQABAAIAAAC1AAMAAQABAAMAAAC1AAQAAQABAAQAAAC1AAUAAQABAAUAAAC2AAAAAQACAAAAAAC2AAEAAQACAAEAAAC2AAIAAQACAAIAAAC2AAMAAQACAAMAAAC2AAQAAQACAAQAAAC2AAUAAQACAAUAAAC3AAAAAQADAAAAAAC3AAEAAQADAAEAAAC3AAIAAQADAAIAAAC3AAMAAQADAAMAAAC3AAQAAQADAAQAAAC3AAUAAQADAAUAAAC4AAAAAQAEAAAAAAC4AAEAAQAEAAEAAAC4AAIAAQAEAAIAAAC4AAMAAQAEAAMAAAC4AAQAAQAEAAQAAAC4AAUAAQAEAAUAAAC5AAAAAQAFAAAAAAC5AAEAAQAFAAEAAAC5AAIAAQAFAAIAAAC5AAMAAQAFAAMAAAC5AAQAAQAFAAQAAAC5AAUAAQAFAAUAAAC6AAAAAQAAAAAAAAC6AAEAAQAAAAEAAAC6AAIAAQAAAAIAAAC6AAMAAQAAAAMAAAC6AAQAAQAAAAQAAAC6AAUAAQAAAAUAAAC7AAAAAQABAAAAAAC7AAEAAQABAAEAAAC7AAIAAQABAAIAAAC7AAMAAQABAAMAAAC7AAQAAQABAAQAAAC7AAUAAQABAAUAAAC8AAAAAQACAAAAAAC8AAEAAQACAAEAAAC8AAIAAQACAAIAAAC8AAMAAQACAAMAAAC8AAQAAQACAAQAAAC8AAUAAQACAAUAAAC9AAAAAQADAAAAAAC9AAEAAQADAAEAAAC9AAIAAQADAAIAAAC9AAMAAQADAAMAAAC9AAQAAQADAAQAAAC9AAUAAQADAAUAAAC+AAAAAQAEAAAAAAC+AAEAAQAEAAEAAAC+AAIAAQAEAAIAAAC+AAMAAQAEAAMAAAC+AAQAAQAEAAQAAAC+AAUAAQAEAAUAAAC/AAAAAQAFAAAAAAC/AAEAAQAFAAEAAAC/AAIAAQAFAAIAAAC/AAMAAQAFAAMAAAC/AAQAAQAFAAQAAAC/AAUAAQAFAAUAAAA=")
tile_set = ExtResource("1_d88r8")

[node name="Home" type="StaticBody2D" parent="."]
position = Vector2(-652, 5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Home"]
position = Vector2(891.5, -75)
shape = SubResource("RectangleShape2D_2jc2f")

[node name="Home" type="Sprite2D" parent="Home"]
position = Vector2(887, -75)
scale = Vector2(0.779365, 0.76)
texture = ExtResource("2_21eqe")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(363, 1)
script = ExtResource("4_wcg3m")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
position = Vector2(43, -28)
texture = ExtResource("5_2jc2f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(42.5, -31)
shape = SubResource("RectangleShape2D_l1h8d")

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(43, -43)
zoom = Vector2(2.38, 2.38)

[node name="TalkPanel" type="Panel" parent="Player/Camera2D"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -25.0
offset_top = -119.0
offset_right = 425.0
offset_bottom = -73.0
grow_horizontal = 2

[node name="TalkLabel" type="Label" parent="Player/Camera2D/TalkPanel"]
layout_mode = 0
offset_left = 3.0
offset_top = -3.0
offset_right = 76.0
offset_bottom = 46.0

[node name="Collisions" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collisions"]
position = Vector2(1712, 10)
shape = SubResource("RectangleShape2D_v8knv")

[node name="EnemyArea" type="StaticBody2D" parent="."]
position = Vector2(2413, -48)

[node name="EnemyArea" type="Area2D" parent="EnemyArea"]
script = ExtResource("16_711hm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyArea/EnemyArea"]
position = Vector2(31, -1)
shape = SubResource("RectangleShape2D_7yjb2")

[node name="AdrianSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_6df8n")
volume_db = 7.0

[connection signal="body_entered" from="EnemyArea/EnemyArea" to="EnemyArea/EnemyArea" method="_on_body_entered"]
